--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -13,8 +13,8 @@
         <action
             android:id="@+id/toSignUp1"
             app:destination="@id/signUp1"
-            app:enterAnim="@android:anim/slide_out_right"
-            app:exitAnim="@android:anim/slide_in_left" />
+            app:popUpTo="@id/startFragment"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/signUp1"
@@ -24,8 +24,8 @@
         <action
             android:id="@+id/toSignUp2"
             app:destination="@id/signUp2"
-            app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out" />
+            app:popUpTo="@id/signUp1"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/signUp2"
@@ -35,8 +35,9 @@
         <action
             android:id="@+id/toSignUp3"
             app:destination="@id/signUp3"
-            app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out" />
+            app:launchSingleTop="false"
+            app:popUpTo="@id/signUp2"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
         android:id="@+id/signUp3"
