--- a/app/src/main/res/layout/fragment_sign_up1.xml
+++ b/app/src/main/res/layout/fragment_sign_up1.xml
@@ -97,6 +97,7 @@
         android:id="@+id/navBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="Back"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/primary"
         android:src="@drawable/baseline_arrow_back_ios_24"
