--- a/app/src/main/res/layout/fragment_sign_up2.xml
+++ b/app/src/main/res/layout/fragment_sign_up2.xml
@@ -98,6 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:contentDescription="Back"
         android:backgroundTint="@color/primary"
         android:src="@drawable/baseline_arrow_back_ios_24"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
