--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -51,5 +51,6 @@
     <fragment
         android:id="@+id/signUp43"
         android:name="com.example.spotifyclone.SignUp4"
-        android:label="SignUp4" />
+        android:label="SignUp4"
+        tools:layout="@layout/fragment_sign_up4"/>
 </navigation>
