--- a/app/src/main/res/layout/fragment_sign_up3.xml
+++ b/app/src/main/res/layout/fragment_sign_up3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
-    tools:context=".SignUp3">
+    tools:context=".SignUp.SignUp3">
 
 
     <androidx.appcompat.widget.Toolbar
