--- a/app/src/main/res/layout/fragment_choose_artist.xml
+++ b/app/src/main/res/layout/fragment_choose_artist.xml
@@ -88,4 +88,17 @@
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toBottomOf="@+id/edtSearch"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btnNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:background="@drawable/btn_create_acc"
+        android:layout_marginBottom="32dp"
+        android:translationZ="1dp"
+        android:text="Next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
+        app:layout_constraintStart_toStartOf="@+id/leftGuideline" />
 </androidx.constraintlayout.widget.ConstraintLayout>
