text capitalize changes

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Recently Played"
+        android:text="Recently played"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -33,7 +33,7 @@
         android:id="@+id/txtGood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Good Evening"
+        android:text="Good evening"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -118,6 +118,7 @@
         android:layout_marginTop="24dp"
         android:background="@drawable/btn_filled_gray"
         android:text="Music"
+        android:textStyle="bold"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
@@ -129,7 +130,8 @@
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/btn_filled_gray"
-       android:text="Music"
+       android:text="Podcasts"
+       android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnMusic"
