--- a/app/src/main/res/layout/fragment_sign_up4.xml
+++ b/app/src/main/res/layout/fragment_sign_up4.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create account"
+            android:text="@string/sign_txt_create"
             android:textSize="16sp" />
 
     </androidx.appcompat.widget.Toolbar>
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="What's your name?"
+        android:text="@string/sign4_txt_label"
         android:textColor="@color/white"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -76,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="This appears on your spotify profile"
+        android:text="@string/sign4_txt_description"
         android:textColor="@color/white"
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
@@ -89,7 +89,7 @@
         android:background="@drawable/btn_create_acc"
         android:padding="15dp"
         app:layout_constraintVertical_bias="0.8"
-        android:text="Create an account"
+        android:text="@string/sign4_btn_create"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
@@ -127,7 +127,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="By tapping on Create Account , you agree to the spotify Terms of Use. "
+        android:text="@string/sign4_txt_agree"
         android:textColor="@color/white"
         android:textSize="10sp"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
@@ -140,7 +140,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textSize="10sp"
-        android:text="Terms of use"
+        android:text="@string/sign4_txt_terms"
         android:textColor="@color/green"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toBottomOf="@+id/txtByTapping" />
@@ -150,7 +150,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="to learn more about how Spotify collect, uses, shares and protects your personal data, Please see the Spotify Privacy Policy.."
+        android:text="@string/sign4_txt_agree2"
         android:textColor="@color/white"
         android:textSize="10sp"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
@@ -162,7 +162,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textSize="10sp"
-        android:text="Privacy Policy"
+        android:text="@string/sign4_txt_privacy"
         android:textColor="@color/green"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toBottomOf="@+id/txtToLearn" />
@@ -172,7 +172,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Please send me news and offers from Spotify"
+        android:text="@string/sign4_txt_accept"
         android:textColor="@color/white"
         android:textSize="10sp"
         app:layout_constraintEnd_toStartOf="@+id/radioButton"
@@ -195,7 +195,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Share my registration data with Spotify's content providers for marketing purposes"
+        android:text="@string/sign4_txt_accept2"
         android:textColor="@color/white"
         android:textSize="10sp"
         app:layout_constraintEnd_toStartOf="@+id/radioButton2"
