--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -27,7 +27,7 @@
         android:id="@+id/header1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Millions of Songs."
+        android:text="@string/startL_header1"
         android:translationZ="1dp"
         android:textColor="@color/white"
         android:textSize="28sp"
@@ -42,7 +42,7 @@
         android:id="@+id/header2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Free on Spotify."
+        android:text="@string/startL_header2"
         android:textColor="@color/white"
         android:textSize="28sp"
         android:translationZ="1dp"
@@ -58,7 +58,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background = "@drawable/btn_signup"
-        android:text="Sign up free"
+        android:text="@string/startL_btn_signUp"
         android:textStyle="bold"
         android:textAllCaps="false"
         app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
@@ -72,7 +72,7 @@
         android:layout_width="0dp"
         android:layout_marginTop="5dp"
         android:layout_height="wrap_content"
-        android:text="Continue with Google"
+        android:text="@string/startL_btn_google"
         android:textStyle="bold"
         android:drawableLeft="@drawable/google"
         android:padding="15dp"
@@ -92,7 +92,7 @@
         android:background="@drawable/btn_continue"
         android:drawableStart="@drawable/facebook"
         android:padding="15dp"
-        android:text="Continue with Facebook"
+        android:text="@string/startL_btn_facebook"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -123,7 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
-        android:text="Log in"
+        android:text="@string/startL_txt_login"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
