--- a/app/src/main/res/layout/fragment_choose_artist.xml
+++ b/app/src/main/res/layout/fragment_choose_artist.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Choose 3 or more artists you like."
+            android:text="@string/choose_txt_header"
             android:textSize="16sp" />
 
     </androidx.appcompat.widget.Toolbar>
