--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -41,7 +41,7 @@
         app:layout_constraintGuide_percent="0.94" />
 
     <TextView
-        android:id="@+id/txtEmail"
+        android:id="@+id/labelEdt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Email or username"
@@ -63,7 +63,7 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
-        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/labelEdt" />
 
 
 
@@ -114,7 +114,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/primary"
         android:src="@drawable/baseline_arrow_back_ios_24"
-        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
+        app:layout_constraintBottom_toTopOf="@+id/labelEdt"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
