--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
-    tools:context=".Home.HomeFragment">
+    tools:context=".ui.fragments.home.HomeFragment">
 
     <TextView
         android:id="@+id/txtRecent"
