--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/primary"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Home.HomeFragment">
+    tools:context=".ui.fragments.home.HomeFragment">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
