--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/primary"
-    tools:context=".FirstPage.StartFragment">
+    tools:context=".ui.fragments.pre_information.StartFragment">
 
 
     <ImageView
