--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -19,21 +19,12 @@
         android:id="@+id/searchFragment"
         android:name="com.example.spotifyclone.ui.fragments.search.SearchFragment"
         android:label="SearchFragment"
-        tools:layout="@layout/fragment_search">
-        <action
-            android:id="@+id/toLibrary"
-            app:destination="@id/libraryFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_search"/>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.spotifyclone.ui.fragments.home.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fragment_home">
-        <action
-            android:id="@+id/toSearch"
-            app:destination="@id/searchFragment" />
-
-    </fragment>
+        tools:layout="@layout/fragment_home"/>
     <action
         android:id="@+id/toSearch"
         app:destination="@id/searchFragment" />
