--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -5,20 +5,21 @@
         android:id="@+id/homeFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:icon="@drawable/baseline_home_24"
+        android:icon="@drawable/icon_menu_home"
         android:title="Home"
         android:visible="true" />
     <item
         android:id="@+id/searchFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:icon="@drawable/baseline_search_24"
+        android:icon="@drawable/icon_menu_search"
         android:title="Search" />
     <item
         android:id="@+id/libraryFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:icon="@drawable/baseline_library_books_24"
+        android:checked="false"
+        android:icon="@drawable/icon_menu_library"
         android:title="Your Library"
         android:visible="true" />
 </menu>
