--- a/app/src/main/res/navigation/activity_main_nav.xml
+++ b/app/src/main/res/navigation/activity_main_nav.xml
@@ -19,7 +19,11 @@
         android:id="@+id/searchFragment"
         android:name="com.example.spotifyclone.ui.fragments.search.SearchFragment"
         android:label="SearchFragment"
-        tools:layout="@layout/fragment_search"/>
+        tools:layout="@layout/fragment_search">
+        <action
+            android:id="@+id/action_searchFragment_to_searchNextFragment"
+            app:destination="@id/searchNextFragment" />
+    </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.spotifyclone.ui.fragments.home.HomeFragment"
@@ -105,6 +109,11 @@
             app:popUpTo="@id/activity_main_nav"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/searchNextFragment"
+        android:name="com.example.spotifyclone.ui.fragments.search.SearchNextFragment"
+        android:label="fragment_search_next"
+        tools:layout="@layout/fragment_search_next" />
 
 
 </navigation>
