--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -14,6 +14,7 @@
         android:background="@drawable/edt_search"
         android:drawableLeft="@drawable/baseline_search_24"
         android:drawablePadding="10dp"
+        android:focusable="false"
         android:ems="10"
         android:drawableTint="@color/black"
         android:textColorHint="@color/black"
